2004-10-13  Bruno Haible  <bruno@clisp.org>

	* makemake.in (XCFLAGS): Don't add -fsingle when using a C++ compiler.

2004-10-10  Bruno Haible  <bruno@clisp.org>

	Check that user-defined methods on many MOP generic functions behave
	correctly.
	* clos-genfun4.lisp (extended-method-check): New function.
	(*mop-standardized-packages*): New variable.
	(mop-standardized-p, add-extended-method-check): New functions.
	(*extended-method-check-method*): New variable.
	(initialize-extended-method-check): New function.
	(generic-function-*): Enable extended method check.
	* clos-method3.lisp (method-*): Likewise.
	* clos-slotdef3.lisp (slot-definition-*): Likewise.
	* clos-class6.lisp (class-*, finalize-inheritance): Likewise.
	* clos-methcomb4.lisp (find-method-combination): Likewise.

2004-10-09  Bruno Haible  <bruno@clisp.org>

	Allow tracing of compute-applicable-methods et al.
	* clos-genfun1.lisp (|#'compute-discriminating-function|,
	|#'compute-applicable-methods|,
	|#'compute-applicable-methods-using-classes|,
	|#'compute-effective-method|): New variables.
	* clos-methcomb2.lisp (compute-effective-method-as-function-form):
	Use them.
	* clos-genfun2.lisp (install-dispatch,
	compute-applicable-methods-effective-method): Likewise.
	* clos-genfun4.lisp: Initialize |#'compute-discriminating-function|,
	|#'compute-applicable-methods|,
	|#'compute-applicable-methods-using-classes|,
	|#'compute-effective-method|.

2004-10-09  Bruno Haible  <bruno@clisp.org>

	Allow the user to override class-direct-subclasses.
	* clos-class3.lisp (class-direct-subclasses): New preliminary function.
	(checked-class-direct-subclasses): New function.
	(list-all-finalized-subclasses): Use it instead of
	list-direct-subclasses.

2004-10-09  Bruno Haible  <bruno@clisp.org>

	Improved bootstrapping.
	* clos-class3.lisp (defclass): Hardwire the
	CLASS-VALID-INITIALIZATION-KEYWORDS result if the metaclass is
	STANDARD-CLASS or FUNCALLABLE-STANDARD-CLASS.